--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -3,7 +3,7 @@
 
 
 
-<!-- 
+
 <a href="/users">Пользователи</a>
 
 <h1>Информация о пользователе</h1>
@@ -13,4 +13,4 @@
 <p>Город: <?= $user['city'] ?></p>
 <?php if (isset($user['temperature'])): ?>
     <p>Температура в городе: <?= $user['temperature'] ?>°C</p>
-<?php endif; ?> -->
+<?php endif; ?>
