--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -1,4 +1,4 @@
-<h2>ID: <?= htmlspecialchars($id) ?></h2>
+<!-- <h2>ID: <?= htmlspecialchars($id) ?></h2>
 <h2>Nickname: <?= htmlspecialchars($nickname) ?></h2>
 
 
@@ -16,7 +16,7 @@
 <p>Город: <?= $user['city'] ?></p>
 <?php if (isset($user['temperature'])): ?>
     <p>Температура в городе: <?= $user['temperature'] ?>°C</p>
-<?php endif; ?>
+<?php endif; ?> -->
 
 
 
