--- a/templates/users/show.twig
+++ b/templates/users/show.twig
@@ -4,7 +4,7 @@
     {% endif %}
 </div>
 
-<h1>User List</h1>
+<h1>Список пользователей</h1>
 <ul>
     {% for user in users %}
     <li>
@@ -14,8 +14,7 @@
     <br> 
     {% endfor %}
 </ul>
-<a href="{{ createUrl }}">Create New User</a>
-
+<a href="{{ createUrl }}">Создать нового пользователя</a>
 
 <script>
     setTimeout(function() {
